# start-pybind11

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  setup.bash.in
cmake/: global.cmake  global_macros.cmake  global_options.cmake  summary.cmake
cmake/common/: include_guard.cmake
docs/: cpp_thread_callback_python_function.md  first_steps.md
src/cpp/: CMakeLists.txt
src/cpp/cpp_thread_callback/: CMakeLists.txt  tick.cc  tick.h  tick_test.cc
src/cpp/first_steps/: CMakeLists.txt  first_steps.cc  first_steps.h
src/pybind/: CMakeLists.txt
src/pybind/cpp_thread_callback/: CMakeLists.txt  tick_pb.cc  tick_test.py
src/pybind/first_steps/: CMakeLists.txt  first_steps_pb.cc
